--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 $accent_color: #b88b58;
 $bl: #000;
-$wh: #fff;
+$wh: #FFF;
 $small_h: #aeaeae;
 
 @mixin reset_default {
@@ -36,7 +36,7 @@ $small_h: #aeaeae;
 	width: 194px;
 	height: 45px;
 	border: none;
-	border-radius: 25px;
+	border-radius: 20px;
 }
 
 [class*="col-"] {
@@ -154,50 +154,49 @@ header {
 	padding: 55px 15px;
 	position: relative;
 
-		.fa-phone {
-			position: absolute;
-			width: 65px;
-			height: 65px;
-			top: -35px;
-			right: 80px;
-			font-size: 35px;
-			text-align: center;
-			padding: 5px;
-			color: $wh;
-			background-color: $accent_color;
-			padding: 10px;
-			border-radius: 50%;
-		}
+	.fa-phone {
+		position: absolute;
+		width: 65px;
+		height: 65px;
+		top: -35px;
+		right: 80px;
+		font-size: 35px;
+		text-align: center;
+		padding: 15px;
+		color: $wh;
+		background-color: $accent_color;
+		border-radius: 50%;
+	}
 
-		h2 {
-			@include header_styles;
-		}
+	h2 {
+		@include header_styles;
+	}
 
-		h3 {
-			@include small_header;
-			margin-bottom: 45px;
-			color: $small_h;
-		}
+	h3 {
+		@include small_header;
+		margin-bottom: 45px;
+		color: $small_h;
+	}
 
 
-		p {
-			padding: 10px;
-			margin-top: 8px;
-			font-size: 14px;
-			line-height: 25px;
-			color: #242424;
-			font-weight: 500;
-		}
+	p {
+		padding: 10px;
+		margin-top: 8px;
+		font-size: 14px;
+		line-height: 25px;
+		color: #242424;
+		font-weight: 500;
+	}
 
-		button {
-			margin-top: 15px;
-			@include button_styles;
-		}
+	button {
+		margin-top: 15px;
+		@include button_styles;
+	}
 
-		img {
-			width: 445px;
-			height: 275px;
-		}
+	img {
+		width: 445px;
+		height: 275px;
+	}
 }
 
 //Services section
@@ -438,6 +437,7 @@ header {
 
 		}
 	}
+
 	.dots {
 		display: block;
 		margin: 50px auto 0 auto;
@@ -517,7 +517,7 @@ header {
 //Prices section
 .prices {
 	padding: 55px;
-	height: 560px;
+	height: 575px;
 	background-color: #ededed;
 
 	h2 {
@@ -573,21 +573,23 @@ header {
 			}
 
 			button {
-					margin: 17px auto 33px auto;
-					width: 129px;
-					height: 45px;
-					padding: 10px 38px;
-					font-size: 12px;
-					font-weight: 700;
-					text-transform: uppercase;
-					background-color: #373737;
-					color: $wh;
-					line-height: 18px;
-					border-radius: 25px;
-					border: none;
-					&:hover {
-						background-color: $accent_color;;
-					}
+				margin: 17px auto 33px auto;
+				width: 129px;
+				height: 45px;
+				padding: 10px 38px;
+				font-size: 12px;
+				font-weight: 700;
+				text-transform: uppercase;
+				background-color: #373737;
+				color: $wh;
+				line-height: 18px;
+				border-radius: 25px;
+				border: none;
+				&:hover {
+					background-color: $accent_color;
+					transition: .5s;
+					cursor: pointer;
+				}
 
 			}
 		}
@@ -600,7 +602,7 @@ header {
 	width: 100%;
 	height: 757px;
 	background-color: $wh;
-	padding: 55px 0;
+	padding: 55px;
 
 	h2 {
 		@include header_styles;
@@ -611,11 +613,17 @@ header {
 	}
 
 	.features {
-		margin: 36px 0 27px 75px;
+		margin: 36px auto 27px auto;
+		width: 80%;
 		border-bottom: 1px solid #bebebe;
 		padding: 0 15px;
 
+		.packages {
+			margin-left: 20px;
+		}
+
 		.wrapper {
+			margin-left: 50px; 
 
 			img {
 				display: inline-block;
@@ -719,17 +727,21 @@ header {
 		font-weight: 700;
 		background-color: $wh;
 		color: #aeaeae;
+		border-bottom: 1px solid #a4a4a4;
 
-		img {
-			display: inline;
-			margin-right: 15px;
-		}
+		.share {
+			display: inline;	
+			img {
+				display: inline;
+				margin-right: 15px;
+			}
 
-		p {
-			display: inline;
-			font-size: 14px;
-			text-transform: uppercase;
-			margin-right: 63px;
+			p {
+				display: inline;
+				font-size: 14px;
+				text-transform: uppercase;
+				margin-right: 63px;
+			}
 		}
 
 		i {
@@ -744,6 +756,7 @@ header {
 
 			&.fa-twitter {
 				background-color: #34c5f0;
+				margin-left: 0;
 			}
 
 			&.fa-linkedin-in {
@@ -787,32 +800,42 @@ header {
 
 		.form-group {
 			@include reset_default;
-		}
 
-		.col-lg-5 {
-			margin-right: 45px;
-		}
+			%input {
+				width: 100%;
+				background-color: inherit;
+				font-size: 13px;
+				font-weight: 300;
+				line-height: 25px;
+				text-transform: uppercase;
+				color: #9e9e9e;
+				padding: 15px 0;
+				border: none;
+				border-bottom: 2px solid #a4a4a4;
+				outline-style: none;
+				margin-bottom: 46px;
+			}
 
-		input {
-			background-color: inherit;
-			font-size: 13px;
-			font-weight: 300;
-			line-height: 25px;
-			text-transform: uppercase;
-			color: #9e9e9e;
-			padding: 15px 0;
-			border: none;
-			border-bottom: 2px solid #a4a4a4;
-			outline-style: none;
-			margin-bottom: 46px;
-
-			&.personal {
+			.personal {
+				height: auto;
 				width: 255px;
+				margin-right: 50px;
+
+				input {
+					@extend %input;
+
+				}
 			}
 
-			&.topic {
-				width: 540px;
+			.topic {
+				height: auto;
+				width: 550px;
+
+				input {
+					@extend %input;
+				}
 			}
+
 		}
 	}
 
@@ -899,7 +922,7 @@ footer {
 	.text {
 		font-size: 12px;
 		color: #7e7e7e;
-		font-weight: 300;
+		font-weight: 400;
 		line-height: 21px;
 		padding: 0 20px;
 	}
@@ -911,23 +934,23 @@ footer {
 		height: 198px;
 		background-color: #373737;
 
-			input {
-				margin-top: 51px;
-				padding: 15px 0;
-				background-color: inherit;
-				outline-style: none;
-				line-height: 24px;
-				border: none;
-				border-bottom: 2px solid #aeaeae;
-				color: #9e9e9e;
-				font-size: 13px;
-				text-transform: uppercase;
-			}
+		input {
+			margin-top: 51px;
+			padding: 15px 0;
+			background-color: inherit;
+			outline-style: none;
+			line-height: 24px;
+			border: none;
+			border-bottom: 2px solid #aeaeae;
+			color: #9e9e9e;
+			font-size: 13px;
+			text-transform: uppercase;
+		}
 
-			button {
-				@include button_styles;
-				margin-top: 28px;
-			}
+		button {
+			@include button_styles;
+			margin-top: 28px;
+		}
 	}
 }
 
@@ -940,32 +963,23 @@ footer {
 				margin-right: 0;
 			}
  
-			ul {
+			.menu_hide {
 				text-align: center;
 				width: 90%;
 
 				li {
 					line-height: 93px;
-					margin: 0 auto;
 				}
-
 			}
 		}
 	}
 
 	.about  {
-		height: auto;
 
 		.video {
 			width: 400px;
 			height: 250px;
 		}
-
-	}
-
-	.services {
-		height: auto;
-
 	}
 
 	.projects {
@@ -974,9 +988,13 @@ footer {
 
 		.portfolio {
 			width: 100%;
+			margin-bottom: 30px;
 
-			.layer {
-				left: 0;
+			.photo {
+				margin-bottom: 0;
+				.layer {
+					left: 0;
+				}
 			}
 		}
 
@@ -1008,12 +1026,7 @@ footer {
 		}
 	}
 
-	.clients {
-		height: auto;
-	}
-
 	.prices {
-		height: auto;
 		padding: 55px 5px;
 
 		.offers {
@@ -1026,8 +1039,9 @@ footer {
 
 	.premium {
 		height: auto;
+		padding: 55px 25px;
 		.features {
-			margin-left: 30px;
+			width: 95%;
 
 			.wrapper {
 				margin-left: 10%;
@@ -1063,10 +1077,6 @@ footer {
 		}
 	}
 
-	.contact {
-		height: auto;
-	}
-
 	footer {
 		height: auto;
 
@@ -1078,23 +1088,25 @@ footer {
 
 }
 
-@media(min-width: 776px) and (max-width: 991px) {
+@media(min-width: 768px) and (max-width: 991px) {
 
 	.hero {
 
-		nav {
+		.main_menu {
+
 			.logo {
-				margin-right: 5%;
+				margin-left: 20px;
+				margin-right: 0;
 			}
 
 			.menu_hide {
-				width: 85%;
+				width: 90%;
+				margin: 0 auto;
+				text-align: center;
 				li {
 					font-size: 12px;
 					line-height: 94px;
-					text-align: center;
 				}
-
 			}
 		}
 	}
@@ -1187,9 +1199,16 @@ footer {
 	.premium {
 		height: auto;
 
-		.packages {
+		.features {
+			width: 90%;
 			display: block;
-			margin: 0 auto;
+			margin: 36px auto;
+
+			.packages {
+				display: block;
+				margin: 0 auto;
+			}
+
 		}
 	}
 
@@ -1222,7 +1241,7 @@ footer {
 	}
 }
 
-@media(max-width: 775px) {
+@media(max-width: 767px) {
 	
 	.hero {
 		height: auto;
@@ -1231,11 +1250,11 @@ footer {
 			display: inline-block;
 		}
 
-		nav {
-			min-height: 90px;
+		.main_menu {
 			height: auto;
 			display: block;
 			background-color: $bl;
+			transition: max-height .25s ease-in-out;
 
 			label {
 				display: inline-block;
@@ -1262,12 +1281,14 @@ footer {
 					line-height: 50px;
 					text-align: center;
 					border-top: 1px solid #aeaeae;
+
 					&:hover {
 						color: $accent_color;
 						border-bottom: 0;
 					}
 					&:first-of-type {
 						border-top: none;
+						margin-left: 7%;
 					}
 				}
 
@@ -1275,7 +1296,6 @@ footer {
 
 
 			#toggle_nav:checked + .menu_hide {
-				transition: 1s;
 				display: block;
 			}
 		}
@@ -1285,7 +1305,7 @@ footer {
 			margin-top: 15%;
 			
 			h1 {
-				font-size: 40px;
+				font-size: 35px;
 			}
 			
 		}
@@ -1293,6 +1313,15 @@ footer {
 
 	.about  {
 		height: auto;
+
+		.fa-phone {
+			width: 55px;
+			height: 55px;
+			font-size: 30px;
+			padding: 12px;
+			top: -30px;
+			right: 30px;
+		}
 
 		img.video {
 			display: block;
@@ -1330,10 +1359,13 @@ footer {
 				margin: 0 auto;
 				font-size: 25px;
 				font-weight: 700;
+
+				&:hover {
+					color: $accent_color;
+				}
 			}
 
 			#toggle:checked + .menu {
-				transition: 1s;
 				display: block;
 			}
 
@@ -1349,22 +1381,11 @@ footer {
 					display: block;
 					border: none;
 					border-bottom: 1px solid #aeaeae;
-				}
-
-				&:hover {
-					border-bottom: none;
-				}
-
-				a {
-					display: inline;
-					color: $bl;
-					text-decoration: none;
 
 					&:hover {
-						color: $accent_color;
+						border-bottom: 1px solid $accent_color;
 					}
-				}
-			
+				}	
 			}
 		}
 
@@ -1418,19 +1439,22 @@ footer {
 	}
 
 	.premium {
+		padding: 55px 15px;
 		height: auto;
 
-		.packages {
-			display: block;
-			width: 300px;
-			height: 250px;
-			margin: 0 auto;
-		}
-
 		.features {
-			margin: 0;
+			width: 95%;
+			margin: 0 auto;
+
+			.packages {
+				display: block;
+				width: 300px;
+				height: 250px;
+				margin: 0 auto 15px auto;
+			}
 
 			.wrapper {
+				margin: 0 auto;
 				img {
 					display: inline;
 				}
@@ -1442,7 +1466,6 @@ footer {
 					p {
 						margin-left: 45px;
 					}
-
 				}
 			}
 		}
@@ -1471,9 +1494,18 @@ footer {
 		.socials {
 			height: auto;
 
-			p {
-				margin-right: 20px;
-				line-height: 35px;
+			.share {
+				display: block;
+
+				img {
+					display: inline-block;
+				}
+
+				p {
+					display: inline-block;
+					margin-right: 20px;
+					line-height: 35px;
+				}
 			}
 
 			i {
@@ -1495,11 +1527,13 @@ footer {
 		form {
 			width: auto;
 			margin-top: 30px;
-			padding-left: 15px;
+			padding-left: 5px;
 			text-align: center;
 
-			input.topic {
-				width: 300px;
+			.form-group {
+				.topic {
+					width: 300px;
+				}
 			}
 		}
 
@@ -1508,8 +1542,8 @@ footer {
 
 			.info {
 				padding: 20px;
-				width: 360px;
-				height: 285px;
+				width: 100%;
+				height: auto;
 				left: 0;
 
 				p {
